--- a/javascript/basic_concepts/vue/exercicios/basico.html
+++ b/javascript/basic_concepts/vue/exercicios/basico.html
@@ -7,9 +7,33 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+    <div id="app">
+        <p>1) Soma: {{2+2}}</p>
+        <p>2) {{"teste".toUpperCase()}} </p>
+        <p>3) Produto: {{nome}}, {{preco}}, Com desconto: {{(preco*(1-desconto)).toFixed(2)}}</p>
+        <p>4) Hora certa: {{horaCerta()}}</p>
+        <p>5) Preço com desconto: R$ {{precoComDesconto}} </p>
+    </div>
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data: {
+              nome: 'Caneta',
+              preco: 6.89,
+              desconto: 0.15
+            },
+            methods: {
+                horaCerta() {
+                    return new Date().toLocaleString()
+                },
+            },
+            computed: {
+                precoComDesconto() {
+                    return (this.preco * (1-this.desconto)).toFixed(2)
+                }
+            }
+
+        })
     </script>
 </body>
 </html>
